syntax = "proto3";

option go_package = "proto;protogen";
option java_multiple_files = true;
option java_package = "io.bff.service.auth";
option java_outer_classname = "AuthProto";

package auth;

message Auth {
  string user_id = 1;
  string session_id = 2;
  string account_id = 3;
  string team_id = 4;
  string role = 5;
}
